# link-shortener

./: .flake8  .gitignore  AUTHORS  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements - not working.txt  requirements.txt  test.sh
Documentation/: AUTHORS  LICENSE  SESSION_ERROR.md  SETTINGS.md
alembic/: env.py
alembic/versions/: 0001_initial_setup.py  0002_change_endpoint_length.py  change_endpoint_length.py  initial_setup.py
link_shortener/: extra_routes.py  form_routes.py  models.py  server.py  templates.py  view_routes.py
link_shortener/api/: api_create.py  api_delete.py  api_redirect.py  api_retrieve.py  api_switch.py  api_update.py  create_delete.py  retrieve.py  retrieve_detail.py  retrieve_list.py  status_switchers.py  update_link.py
link_shortener/commands/: authorize.py  create.py  delete.py  filter.py  redirect.py  retrieve.py  status_change.py  switch.py  update.py  validation.py
link_shortener/core/: authentication.py  decorators.py  exceptions.py  filter.py  generics.py  initialise_db.py  run_migration.py  test_data.py  validation.py  wait_for_db.py  wait_for_db_and_migrate.py
link_shortener/jinja_templates/: about.html  base.html  create_form.html  edit_form.html  message.html  my_links.html  password_form.html
link_shortener/templates/: all_links.html  analytics.html  base.html  basecss.html  create_form.html  css.html  delete.html  (+6 more)
src/: authentication.py  form_routes.py  forms.py  initialise_db.py  listeners.py  models.py  routes.py  server.py  templates.py  view_routes.py  views.py  wait_for_db.py
static/: all_links.css  all_links_form.js  common.css  create.css  createAndEdit.js  create_edit.js  delete.css  edit.css  onReady.js  on_ready.js
(+46 files in other folders)
