[tool.poetry]
name= 'link-shortener-poetry'
version = '1.0'
description = 'Package manager for link shortener'
authors = ['Vojtech Janousek']

[tool.poetry.dependencies]
python = '^3.7'
sanic = '^19.9'
aiomysql = '^0.0.20'
asyncio = '^3.4.3'
sqlalchemy = '^1.3.16'
Sanic-Auth = '^0.2.0'
sanic-session = '^0.6.0'
sanic-oauth = '^0.4.0'
python-decouple = '^3.3'
Sanic-WTF = '^0.5.0'
Jinja2 = '^2.11.2'

[tool.poetry.dev-dependencies]
flake8 = '^3.7'

[build-system]
requires = ['poetry>=0.12']
build-backend = 'poetry.masonry.api'
